--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Maaz Amjad - Academic Profile</title>
+    <title>Zoie Bonnette - Academic Profile</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -221,7 +221,7 @@
   <body>
     <div class="container">
       <nav>
-        <a href="index.html" class="name-title">Maaz Amjad</a>
+        <a href="index.html" class="name-title">Zoie Bonnette</a>
         <div class="nav-links">
           <a href="projects.html">Projects</a>
           <a href="files/Maaz_cv.pdf" target="_blank">CV</a>
@@ -235,7 +235,7 @@
             alt="Profile Picture"
             class="profile-image"
           />
-          <h1>Maaz Amjad</h1>
+          <h1>Zoie Bonnette</h1>
           <p class="interests">Interests in AI, Human Computer Interaction.</p>
           <div class="social-links">
             <a href="#" class="social-link location">
@@ -250,12 +250,12 @@
               <img src="images/logo.png" alt="TTU Logo" class="ttu-logo" />
               Texas Tech University
             </a>
-            <a href="mailto:maaz.amjad@ttu.edu" class="social-link email">
+            <a href="mailto:bonnettezoie@gmail.com" class="social-link email">
               <i class="fas fa-envelope"></i>
               Email
             </a>
             <a
-              href="https://github.com/MaazAmjad"
+              href="https://github.com/zoiebonnette03"
               class="social-link github"
               target="_blank"
             >
@@ -263,20 +263,12 @@
               Github
             </a>
             <a
-              href="https://www.linkedin.com/in/maazmjad/"
+              href="https://www.linkedin.com/in/zoie-bonnette/"
               class="social-link linkedin"
               target="_blank"
             >
               <i class="fab fa-linkedin"></i>
               LinkedIn
-            </a>
-            <a
-              href="https://x.com/MaazAmjad13"
-              class="social-link twitter"
-              target="_blank"
-            >
-              <i class="fab fa-x-twitter"></i>
-              X (formerly Twitter)
             </a>
           </div>
         </div>
