--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <a href="index.html" class="name-title">Zoie Bonnette</a>
         <div class="nav-links">
           <a href="projects.html">Projects</a>
-          <a href="files/Maaz_cv.pdf" target="_blank">CV</a>
+          <a href="files/Zoie_cv.pdf" target="_blank">CV</a>
         </div>
       </nav>
 
