testing new webpage

--- a/index.html
+++ b/index.html
@@ -221,9 +221,10 @@
   <body>
     <div class="container">
       <nav>
-        <a href="index.html" class="name-title">Zoie Bonnette</a>
+        <a href="index.html" class="name-title"></a>
         <div class="nav-links">
           <a href="projects.html">Projects</a>
+          <a href="index2.html">New Page</a>"
           <a href="files/Bonnette_Zoie_Resume.pdf" target="_blank">CV</a>
         </div>
       </nav>
