--- a/index2.html
+++ b/index2.html
@@ -1,245 +1,336 @@
-<style>
-  .profile-container {
-    background-color: #f2f2f2;
-    align-items: flex-start;
-    color: #222;
-  }
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      .profile-container {
+        background-color: #f2f2f2;
+        align-items: flex-start;
+        color: #222;
+      }
 
-  @media (max-width: 991px) {
-    .profile-container {
-      padding: 0 20px;
-    }
-  }
+      @media (max-width: 991px) {
+        .profile-container {
+          padding: 0 20px;
+        }
+      }
 
-  .profile-name {
-    font: 500 40px Montserrat, sans-serif;
-  }
+      .profile-name {
+        font: 500 40px Montserrat, sans-serif;
+        margin: 0rem;
+      }
 
-  @media (max-width: 991px) {
-    .profile-name {
-      font-size: 40px;
-    }
-  }
+      @media (max-width: 991px) {
+        .profile-name {
+          font-size: 40px;
+        }
+      }
 
-  .profile-title {
-    font: 400 18px Roboto, sans-serif;
-  }
+      .profile-title {
+        font: 400 18px Roboto, sans-serif;
+        margin: 0rem;
+      }
 
-  .content-wrapper {
-    align-self: stretch;
-    display: flex;
-    margin-top: 25px;
-    gap: 20px;
-    justify-content: space-between;
-  }
+      .content-wrapper {
+        align-self: stretch;
+        display: flex;
+        margin-top: 25px;
+        gap: 20px;
+        justify-content: space-between;
+      }
 
-  .navigation-menu {
-    align-self: flex-start;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    white-space: nowrap;
-    font: 400 18px Roboto, sans-serif;
-  }
+      .navigation-menu {
+        align-self: flex-start;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        white-space: nowrap;
+        font: 400 18px Roboto, sans-serif;
+      }
 
-  @media (max-width: 991px) {
-    .navigation-menu {
-      white-space: initial;
-    }
-  }
+      @media (max-width: 991px) {
+        .navigation-menu {
+          white-space: initial;
+        }
+      }
 
-  .menu-indicator {
-    background-color: #222;
-    border-radius: 50%;
-    width: 16px;
-    height: 16px;
-  }
+      .menu-indicator {
+        background-color: #222;
+        border-radius: 50%;
+        width: 16px;
+        height: 16px;
+      }
 
-  .menu-item {
-    align-self: stretch;
-    margin-top: 10px;
-  }
+      .menu-item {
+        align-self: stretch;
+        margin-top: 10px;
+      }
 
-  .menu-item-cv {
-    margin-top: 16px;
-  }
+      .menu-item-cv {
+        margin-top: 16px;
+      }
 
-  .about-section {
-    display: flex;
-    margin-top: 10px;
-    flex-direction: column;
-  }
+      .about-section {
+        display: flex;
+        margin-top: 10px;
+        flex-direction: column;
+      }
 
-  @media (max-width: 991px) {
-    .about-section {
-      max-width: 100%;
-    }
-  }
+      @media (max-width: 991px) {
+        .about-section {
+          max-width: 100%;
+        }
+      }
 
-  .about-heading {
-    text-align: center;
-    align-self: flex-end;
-    font: 500 36px Montserrat, sans-serif;
-  }
+      .about-heading {
+        text-align: center;
+        align-self: flex-end;
+        font: 500 36px Montserrat, sans-serif;
+      }
 
-  @media (max-width: 991px) {
-    .about-heading {
-      margin-right: 10px;
-      font-size: 40px;
-    }
-  }
+      @media (max-width: 991px) {
+        .about-heading {
+          margin-right: 10px;
+          font-size: 40px;
+        }
+      }
 
-  .about-content {
-    border-radius: 16px;
-    background-color: #e1d4e8;
-    margin-top: 32px;
-    padding: 20px 19px 68px;
-    font: 400 18px Roboto, sans-serif;
-  }
+      .about-content {
+        border-radius: 16px;
+        background-color: #e1d4e8;
+        margin-top: 32px;
+        padding: 20px 19px 68px;
+        font: 400 18px Roboto, sans-serif;
+      }
 
-  @media (max-width: 991px) {
-    .about-content {
-      max-width: 100%;
-    }
-  }
+      @media (max-width: 991px) {
+        .about-content {
+          max-width: 100%;
+        }
+      }
 
-  .contact-info {
-    display: flex;
-    flex-direction: column;
-    margin: auto 0;
-    font: 400 18px Roboto, sans-serif;
-  }
+      .contact-info {
+        display: flex;
+        flex-direction: column;
+        margin: auto 0;
+        font: 400 18px Roboto, sans-serif;
+      }
 
-  .profile-image {
-    aspect-ratio: 1;
-    object-fit: contain;
-    object-position: center;
-    width: 100%;
-    border-radius: 50px;
-  }
+      .profile-image {
+        aspect-ratio: 1;
+        object-fit: contain;
+        object-position: center;
+        width: 100%;
+        border-radius: 50px;
+      }
 
-  .contact-details {
-    align-self: center;
-    display: flex;
-    margin-top: 22px;
-    width: 308px;
-    max-width: 100%;
-    gap: 14px;
-  }
+      .contact-details {
+        align-self: center;
+        display: flex;
+        margin-top: 22px;
+        width: 308px;
+        max-width: 100%;
+        gap: 14px;
+      }
 
-  .contact-icon {
-    aspect-ratio: 0.16;
-    object-fit: contain;
-    object-position: center;
-    width: 24px;
-  }
+      .contact-icon {
+        aspect-ratio: 0.16;
+        object-fit: contain;
+        object-position: center;
+        width: 24px;
+      }
 
-  .contact-list {
-    align-self: flex-start;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    flex-grow: 1;
-    flex-basis: 0;
-    width: fit-content;
-  }
+      .contact-list {
+        align-self: flex-start;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        flex-grow: 1;
+        flex-basis: 0;
+        width: fit-content;
+      }
 
-  .contact-item {
-    align-self: stretch;
-    margin-top: 20px;
-  }
+      .contact-item {
+        align-self: stretch;
+        margin-top: 20px;
+      }
 
-  .contact-item-github {
-    margin-top: 18px;
-  }
+      .contact-item-github {
+        margin-top: 18px;
+      }
 
-  .contact-item-linkedin {
-    margin-top: 23px;
-  }
+      .contact-item-linkedin {
+        margin-top: 23px;
+      }
 
-  .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border: 0;
-  }
-</style>
+      .visually-hidden {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        padding: 0;
+        margin: -1px;
+        overflow: hidden;
+        clip: rect(0, 0, 0, 0);
+        white-space: nowrap;
+        border: 0;
+      }
+      .social-links {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+      }
 
-<section class="profile-container">
-  <h1 class="profile-name">Zoie Bonnette</h1>
-  <p class="profile-title">Student & Developer</p>
-  <div class="content-wrapper">
-    <nav class="navigation-menu">
-      <div class="menu-indicator" aria-hidden="true"></div>
-      <a href="#projects" class="menu-item">Projects</a>
-      <a href="#cv" class="menu-item menu-item-cv">CV</a>
-    </nav>
-    <div class="about-section">
-      <h2 class="about-heading">About</h2>
-      <p class="about-content">
-        My name is Zoie, I am currently a senior at Texas Tech University and I
-        am studying computer science with a minor in math. I am passionate about
-        leveraging my skills in software development to help better the public
-        and the environment.
-        <br /><br />
-        Over the summer, I was able to intern with Tyler Technologies, which
-        showed me the positive impact software developers can have within the
-        public sector. I have been able to use angular framework (HTML, SCSS,
-        TS) to develop my front-end coding skills and am well versed with unit
-        testing in C#. Throughout my career at Texas Tech, I have learned
-        numerous programming skills, like Java, Python, and C++, as well as
-        collaboration through team projects, something that was reinforced
-        throughout my internship with Tyler Technologies.
-        <br /><br />
-        Participating on TTU's Women's Club Soccer team has shown me the
-        importance of perseverance and leadership qualities.
-        <br /><br />
-        With this strong foundation of software development and personal skills,
-        I hope to continue contributing to improve public welfare and start to
-        contribute to environmental sustainability.
-      </p>
-    </div>
-    <aside class="contact-info">
-      <img
-        src="https://cdn.builder.io/api/v1/image/assets/TEMP/52468f690c1a41619c6c00a1748165999d96dc97eefed97f9a2b70747181e51f?placeholderIfAbsent=true&apiKey=2c2486f8407f475e982aec9797de1290"
-        alt="Zoie Bonnette's profile picture"
-        class="profile-image"
-      />
-      <div class="contact-details">
+      .social-link {
+        text-decoration: none;
+        color: #333;
+        display: flex;
+        align-items: center;
+        gap: 0.8rem;
+        padding: 0.7rem;
+        transition: all 0.3s ease;
+        border-radius: 8px;
+        font-size: 0.95rem;
+      }
+
+      .social-link i {
+        width: 20px;
+        text-align: center;
+        font-size: 1.2rem;
+      }
+      /* Colorful icons */
+      .social-link.linkedin i {
+        color: #0077b5;
+      }
+
+      .social-link.github i {
+        color: #333;
+      }
+
+      .social-link.twitter i {
+        color: #1da1f2;
+      }
+
+      .social-link.email i {
+        color: #ea4335;
+      }
+
+      .social-link.university i {
+        color: #cc0000;
+      }
+
+      .social-link.location i {
+        color: #34a853;
+      }
+
+      /* Hover effects */
+      .social-link:hover {
+        transform: translateX(5px);
+        background-color: #f8f9fa;
+      }
+
+      .social-link.linkedin:hover {
+        background-color: #e6f3f9;
+      }
+
+      .social-link.github:hover {
+        background-color: #f6f8fa;
+      }
+
+      .social-link.twitter:hover {
+        background-color: #e8f5fd;
+      }
+
+      .social-link.email:hover {
+        background-color: #fef2f2;
+      }
+
+      .social-link.university:hover {
+        background-color: #fff5f5;
+      }
+
+      .social-link.location:hover {
+        background-color: #f2f8f4;
+      }
+    </style>
+  </head>
+  <section class="profile-container">
+    <h1 class="profile-name">Zoie Bonnette</h1>
+    <p class="profile-title">Student & Developer</p>
+    <div class="content-wrapper">
+      <nav class="navigation-menu">
+        <div class="menu-indicator" aria-hidden="true"></div>
+        <a href="#projects" class="menu-item">Projects</a>
+        <a href="#cv" class="menu-item menu-item-cv">CV</a>
+      </nav>
+      <div class="about-section">
+        <h2 class="about-heading">About</h2>
+        <p class="about-content">
+          My name is Zoie, I am currently a senior at Texas Tech University and
+          I am studying computer science with a minor in math. I am passionate
+          about leveraging my skills in software development to help better the
+          public and the environment.
+          <br /><br />
+          Over the summer, I was able to intern with Tyler Technologies, which
+          showed me the positive impact software developers can have within the
+          public sector. I have been able to use angular framework (HTML, SCSS,
+          TS) to develop my front-end coding skills and am well versed with unit
+          testing in C#. Throughout my career at Texas Tech, I have learned
+          numerous programming skills, like Java, Python, and C++, as well as
+          collaboration through team projects, something that was reinforced
+          throughout my internship with Tyler Technologies.
+          <br /><br />
+          Participating on TTU's Women's Club Soccer team has shown me the
+          importance of perseverance and leadership qualities.
+          <br /><br />
+          With this strong foundation of software development and personal
+          skills, I hope to continue contributing to improve public welfare and
+          start to contribute to environmental sustainability.
+        </p>
+      </div>
+      <aside class="contact-info">
         <img
-          src="https://cdn.builder.io/api/v1/image/assets/TEMP/07abc18ef4a3bf9abea83f6e0b8d9ff248aca49fe815d1cd5c49ecd927eaaef7?placeholderIfAbsent=true&apiKey=2c2486f8407f475e982aec9797de1290"
-          alt=""
-          class="contact-icon"
-          aria-hidden="true"
+          src="https://cdn.builder.io/api/v1/image/assets/TEMP/52468f690c1a41619c6c00a1748165999d96dc97eefed97f9a2b70747181e51f?placeholderIfAbsent=true&apiKey=2c2486f8407f475e982aec9797de1290"
+          alt="Zoie Bonnette's profile picture"
+          class="profile-image"
         />
-        <ul class="contact-list">
-          <li>Lubbock, TX</li>
-          <li class="contact-item">
-            <a href="mailto:bonnettezoie@gmail.com">bonnettezoie@gmail.com</a>
-          </li>
-          <li class="contact-item contact-item-github">
+        <div class="contact-details">
+          <div class="social-links">
+            <a href="#" class="social-link location">
+              <i class="fas fa-map-marker-alt"></i>
+              Lubbock, Texas, United States
+            </a>
+            <a
+              href="https://www.ttu.edu"
+              class="social-link university"
+              target="_blank"
+            >
+              <img src="images/logo.png" alt="TTU Logo" class="ttu-logo" />
+              Texas Tech University
+            </a>
+            <a href="mailto:bonnettezoie@gmail.com" class="social-link email">
+              <i class="fas fa-envelope"></i>
+              Email
+            </a>
             <a
               href="https://github.com/zoiebonnette03"
+              class="social-link github"
               target="_blank"
-              rel="noopener noreferrer"
-              >zoiebonnette03</a
             >
-          </li>
-          <li class="contact-item contact-item-linkedin">
+              <i class="fab fa-github"></i>
+              Github
+            </a>
             <a
-              href="https://www.linkedin.com/in/zoie-bonnette"
+              href="https://www.linkedin.com/in/zoie-bonnette/"
+              class="social-link linkedin"
               target="_blank"
-              rel="noopener noreferrer"
-              >zoie-bonnette</a
             >
-          </li>
-        </ul>
-      </div>
-    </aside>
-  </div>
-</section>
+              <i class="fab fa-linkedin"></i>
+              LinkedIn
+            </a>
+          </div>
+        </div>
+      </aside>
+    </div>
+  </section>
+</html>
