--- a/index2.html
+++ b/index2.html
@@ -302,19 +302,11 @@
           <div class="social-links">
             <a href="#" class="social-link location">
               <i class="fas fa-map-marker-alt"></i>
-              Lubbock, Texas, United States
-            </a>
-            <a
-              href="https://www.ttu.edu"
-              class="social-link university"
-              target="_blank"
-            >
-              <img src="images/logo.png" alt="TTU Logo" class="ttu-logo" />
-              Texas Tech University
+              Lubbock, TX
             </a>
             <a href="mailto:bonnettezoie@gmail.com" class="social-link email">
               <i class="fas fa-envelope"></i>
-              Email
+              bonnettezoie@gmail.com
             </a>
             <a
               href="https://github.com/zoiebonnette03"
@@ -322,7 +314,7 @@
               target="_blank"
             >
               <i class="fab fa-github"></i>
-              Github
+              zoiebonnette03
             </a>
             <a
               href="https://www.linkedin.com/in/zoie-bonnette/"
@@ -330,7 +322,7 @@
               target="_blank"
             >
               <i class="fab fa-linkedin"></i>
-              LinkedIn
+              zoie-bonnette
             </a>
           </div>
         </div>
