--- a/index2.html
+++ b/index2.html
@@ -277,7 +277,7 @@
       <p class="profile-title">Student & Developer</p>
       <div class="content-wrapper">
         <nav class="nav-links">
-          <a href="index2.html"></a>
+          <a href="index2.html" class="menu-indicator"></a>
           <a href="projects.html">Projects</a>
           <a href="files/Bonnette_Zoie_Resume.pdf" target="_blank">CV</a>
         </nav>
