--- a/index2.html
+++ b/index2.html
@@ -70,7 +70,7 @@
       }
 
       .menu-indicator {
-        background-color: #222;
+        background-color: #3b3b3b;
         border-radius: 50%;
         width: 12px;
         height: 12px;
@@ -262,12 +262,12 @@
 
       .nav-links a {
         text-decoration: none;
-        color: #666;
+        color: #3b3b3b;
         transition: color 0.3s;
       }
 
       .nav-links a:hover {
-        color: #2196f3;
+        color: #e1d4e8;
       }
     </style>
   </head>
