--- a/index2.html
+++ b/index2.html
@@ -100,6 +100,7 @@
       .about-heading {
         text-align: center;
         align-self: flex-end;
+        padding: 0.5rem;
         font: 500 36px Montserrat, sans-serif;
       }
 
@@ -113,8 +114,8 @@
       .about-content {
         border-radius: 16px;
         background-color: #e1d4e8;
-        margin-top: 32px;
-        padding: 20px 19px 68px;
+        margin-left: 4rem;
+        padding: 1.5rem;
         font: 400 18px Roboto, sans-serif;
       }
 
@@ -127,7 +128,7 @@
       .contact-info {
         display: flex;
         flex-direction: column;
-        margin: auto 0;
+        margin-top: 3rem;
         font: 400 18px Roboto, sans-serif;
       }
 
@@ -143,9 +144,7 @@
         align-self: center;
         display: flex;
         margin-top: 22px;
-        width: 308px;
         max-width: 100%;
-        gap: 14px;
       }
 
       .contact-icon {
@@ -200,8 +199,8 @@
         color: #333;
         display: flex;
         align-items: center;
-        gap: 0.8rem;
-        padding: 0.7rem;
+        gap: 0.3rem;
+        padding: 0.3rem;
         transition: all 0.3s ease;
         border-radius: 8px;
         font-size: 0.95rem;
@@ -267,7 +266,7 @@
       }
 
       .nav-links a:hover {
-        color: #e1d4e8;
+        color: #d2b6e0;
       }
     </style>
   </head>
