--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <style>
       * {
         margin: 0;
@@ -128,7 +133,6 @@
       .contact-info {
         display: flex;
         flex-direction: column;
-        margin-top: 3rem;
         font: 400 18px Roboto, sans-serif;
       }
 
@@ -137,7 +141,7 @@
         object-fit: contain;
         object-position: center;
         width: 100%;
-        border-radius: 50px;
+        border-radius: 10rem;
       }
 
       .contact-details {
