idk fi this will wokr

--- a/index2.html
+++ b/index2.html
@@ -80,6 +80,9 @@
         width: 12px;
         height: 12px;
       }
+      .menu-indicator:hover {
+        color: #d2b6e0;
+      }
 
       .menu-item {
         align-self: stretch;
