--- a/index2.html
+++ b/index2.html
@@ -80,9 +80,6 @@
         width: 12px;
         height: 12px;
       }
-      .menu-indicator:hover {
-        color: #d2b6e0;
-      }
 
       .menu-item {
         align-self: stretch;
@@ -281,12 +278,12 @@
     <section class="profile-container">
       <h1 class="profile-name">Zoie Bonnette</h1>
       <p class="profile-title">Student & Developer</p>
+      <nav class="nav-links">
+        <a href="index2.html">Home</a>
+        <a href="projects.html">Projects</a>
+        <a href="files/Bonnette_Zoie_Resume.pdf" target="_blank">CV</a>
+      </nav>
       <div class="content-wrapper">
-        <nav class="nav-links">
-          <a href="index2.html" class="menu-indicator"></a>
-          <a href="projects.html">Projects</a>
-          <a href="files/Bonnette_Zoie_Resume.pdf" target="_blank">CV</a>
-        </nav>
         <div class="about-section">
           <p class="about-content">
             My name is Zoie, I am currently a senior at Texas Tech University
