--- a/index2.html
+++ b/index2.html
@@ -255,12 +255,12 @@
       }
       .nav-links {
         display: flex;
-        align-self: flex-start;
-        flex-direction: column;
-        align-items: flex-start;
+        flex-direction: row;
         white-space: nowrap;
-        font: 400 18px Roboto, sans-serif;
-        gap: 0.5rem;
+        font: 400 24px Montserrat, sans-serif;
+        gap: 15rem;
+        align-self: center;
+        margin-left: 4rem;
       }
 
       .nav-links a {
@@ -271,18 +271,25 @@
 
       .nav-links a:hover {
         color: #d2b6e0;
+        text-decoration: underline wavy #d2b6e0;
+        text-decoration-thickness: 1px;
+      }
+      .profile-wrapper {
+        flex-direction: row;
+        display: flex;
       }
     </style>
   </head>
   <body>
     <section class="profile-container">
-      <h1 class="profile-name">Zoie Bonnette</h1>
-      <p class="profile-title">Student & Developer</p>
-      <nav class="nav-links">
-        <a href="index2.html">Home</a>
-        <a href="projects.html">Projects</a>
-        <a href="files/Bonnette_Zoie_Resume.pdf" target="_blank">CV</a>
-      </nav>
+      <div class="profile-wrapper">
+        <h1 class="profile-name">Zoie Bonnette</h1>
+        <nav class="nav-links">
+          <a href="index2.html">Home</a>
+          <a href="projects.html">Projects</a>
+          <a href="files/Bonnette_Zoie_Resume.pdf" target="_blank">CV</a>
+        </nav>
+      </div>
       <div class="content-wrapper">
         <div class="about-section">
           <p class="about-content">
