--- a/index2.html
+++ b/index2.html
@@ -26,7 +26,7 @@
       }
       .profile-container {
         align-items: flex-start;
-        margin: 1rem;
+        margin: 1.5rem;
       }
 
       @media (max-width: 991px) {
@@ -117,11 +117,11 @@
       }
 
       .about-content {
-        border-radius: 16px;
+        border-radius: 0.5rem;
         background-color: #e1d4e8;
-        margin-left: 4rem;
+        margin-left: 3rem;
+        margin-top: 1rem;
         padding: 1.5rem;
-        font: 400 18px Roboto, sans-serif;
       }
 
       @media (max-width: 991px) {
@@ -133,7 +133,7 @@
       .contact-info {
         display: flex;
         flex-direction: column;
-        font: 400 18px Roboto, sans-serif;
+        padding: 1rem;
       }
 
       .profile-image {
