--- a/index.html
+++ b/index.html
@@ -278,27 +278,24 @@
           <h2>About me</h2>
           <div class="content-block">
             <p>
-              I am a final-year Computer Science student at
-              <a
-                href="https://www.ttu.edu"
-                class="highlight-link"
-                target="_blank"
-                >Texas Tech University</a
-              >, where I've developed a strong foundation in software
-              development and artificial intelligence. Currently, I'm working on
-              my senior thesis project focused on developing machine learning
-              solutions for healthcare applications, under the guidance of
-              <a href="#" class="highlight-link">Dr. [Advisor Name]</a>.
+              My name is Zoie, I am currently a senior at Texas Tech University
+              and I am studying computer science with a minor in math. I am
+              passionate about leveraging my skills in software development to
+              help better the public and the environment.
             </p>
           </div>
 
           <div class="content-block">
             <p>
-              During my academic career, I've maintained a 3.8 GPA while gaining
-              hands-on experience in full-stack development, data structures,
-              and algorithm design. I've served as a teaching assistant for the
-              Introduction to Programming course and led the university's AI
-              Student Society, organizing workshops and hackathons.
+              Over the summer, I was able to intern with Tyler Technologies,
+              which showed me the positive impact software developers can have
+              within the public sector. I have been able to use angular
+              framework (HTML, SCSS, TS) to develop my front-end coding skills
+              and am well versed with unit testing in C#. Throughout my career
+              at Texas Tech, I have learned numerous programming skills, like
+              Java, Python, and C++, as well as collaboration through team
+              projects, something that was reinforced throughout my internship
+              with Tyler Technologies.
             </p>
           </div>
 
@@ -317,12 +314,16 @@
 
           <div class="content-block">
             <p>
-              Beyond academics, I'm an avid participant in competitive
-              programming contests and have represented Texas Tech in regional
-              hackathons. I enjoy contributing to open-source projects and
-              mentoring junior students in programming fundamentals. When I'm
-              not coding, you can find me exploring photography or playing chess
-              at our university's chess club.
+              Beyond academics, participating on TTU's Women's Club Soccer team
+              has shown me the importance of perseverance and leadership
+              qualities.
+            </p>
+          </div>
+          <div class="content-block">
+            <p>
+              With this strong foundation of software development and personal
+              skills, I hope to continue contributing to improve public welfare
+              and start to contribute to environmental sustainability.
             </p>
           </div>
         </div>
