--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             class="profile-image"
           />
           <h1>Zoie Bonnette</h1>
-          <p class="interests">Interests in AI, Human Computer Interaction.</p>
+          <p class="interests">Interests in web design and development.</p>
           <div class="social-links">
             <a href="#" class="social-link location">
               <i class="fas fa-map-marker-alt"></i>
