--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             </p>
           </div>
 
-          <div class="content-block">
+          <!-- <div class="content-block">
             <p>
               My technical interests center around machine learning and
               human-computer interaction. I recently completed a summer
@@ -310,7 +310,7 @@
               creating accessible and user-friendly applications that solve
               practical problems.
             </p>
-          </div>
+          </div> -->
 
           <div class="content-block">
             <p>
