--- a/index2.html
+++ b/index2.html
@@ -36,8 +36,10 @@
       }
 
       .profile-name {
-        font: 500 40px Montserrat, sans-serif;
-        margin: 0rem;
+        font: Arial, sans-serif;
+        margin: 0, auto;
+        color: #2c3e50;
+        text-align: center;
       }
 
       @media (max-width: 991px) {
@@ -137,11 +139,11 @@
       }
 
       .profile-image {
-        aspect-ratio: 1;
-        object-fit: contain;
-        object-position: center;
-        width: 100%;
-        border-radius: 10rem;
+        /* aspect-ratio: 1; */
+        /* object-fit: contain; */
+        /* object-position: center; */
+        width: 30%;
+        border-radius: 2.5rem;
       }
 
       .contact-details {
@@ -275,7 +277,7 @@
         text-decoration-thickness: 1px;
       }
       .profile-wrapper {
-        flex-direction: row;
+        flex-direction: column;
         display: flex;
       }
     </style>
@@ -291,30 +293,6 @@
         </nav>
       </div>
       <div class="content-wrapper">
-        <div class="about-section">
-          <p class="about-content">
-            My name is Zoie, I am currently a senior at Texas Tech University
-            and I am studying computer science with a minor in math. I am
-            passionate about leveraging my skills in software development to
-            help better the public and the environment.
-            <br /><br />
-            Over the summer, I was able to intern with Tyler Technologies, which
-            showed me the positive impact software developers can have within
-            the public sector. I have been able to use angular framework (HTML,
-            SCSS, TS) to develop my front-end coding skills and am well versed
-            with unit testing in C#. Throughout my career at Texas Tech, I have
-            learned numerous programming skills, like Java, Python, and C++, as
-            well as collaboration through team projects, something that was
-            reinforced throughout my internship with Tyler Technologies.
-            <br /><br />
-            Participating on TTU's Women's Club Soccer team has shown me the
-            importance of perseverance and leadership qualities.
-            <br /><br />
-            With this strong foundation of software development and personal
-            skills, I hope to continue contributing to improve public welfare
-            and start to contribute to environmental sustainability.
-          </p>
-        </div>
         <aside class="contact-info">
           <img
             src="https://cdn.builder.io/api/v1/image/assets/TEMP/52468f690c1a41619c6c00a1748165999d96dc97eefed97f9a2b70747181e51f?placeholderIfAbsent=true&apiKey=2c2486f8407f475e982aec9797de1290"
@@ -348,6 +326,31 @@
                 zoie-bonnette
               </a>
             </div>
+          </div>
+          <div class="about-section">
+            <p class="about-content">
+              My name is Zoie, I am currently a senior at Texas Tech University
+              and I am studying computer science with a minor in math. I am
+              passionate about leveraging my skills in software development to
+              help better the public and the environment.
+              <br /><br />
+              Over the summer, I was able to intern with Tyler Technologies,
+              which showed me the positive impact software developers can have
+              within the public sector. I have been able to use angular
+              framework (HTML, SCSS, TS) to develop my front-end coding skills
+              and am well versed with unit testing in C#. Throughout my career
+              at Texas Tech, I have learned numerous programming skills, like
+              Java, Python, and C++, as well as collaboration through team
+              projects, something that was reinforced throughout my internship
+              with Tyler Technologies.
+              <br /><br />
+              Participating on TTU's Women's Club Soccer team has shown me the
+              importance of perseverance and leadership qualities.
+              <br /><br />
+              With this strong foundation of software development and personal
+              skills, I hope to continue contributing to improve public welfare
+              and start to contribute to environmental sustainability.
+            </p>
           </div>
         </aside>
       </div>
